add new property's

--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ allure {
 
 dependencies {
     testImplementation(
+            'commons-io:commons-io:2.11.0',
+            'com.codeborne:pdf-test:1.7.0',
+            'com.codeborne:xls-test:1.2',
             "org.aspectj:aspectjweaver:1.9.6",
             "com.codeborne:selenide:$selenideVersion",
             "io.qameta.allure:allure-selenide:$allureVersion",
